--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -16,7 +16,7 @@
 }
 
 @article{stftindie,
-	author={J. B. {Allen} and L. R. {Rabiner}},
+	author={Jont B. Allen and Lawrence R. Rabiner},
 	journal={Proceedings of the IEEE},
 	title={A unified approach to short-time Fourier analysis and synthesis},
 	year={1977},
@@ -66,7 +66,7 @@ year = {2017},
 pages = {225--268},
 title = {Frame theory for signal processing in psychoacoustics},
 booktitle = {Excursions in Harmonic Analysis, Volume 5},
-editor = {Balan R. and Benedetto J. and Czaja W. and Dellatorre M. and Okoudjou K.},
+editor = {Radu Balan and John J. Benedetto and Wojciech Czaja and Matthew Dellatorre and Kasso A. Okoudjou},
 publisher = {Springer},
 doi = {10.1007/978-3-319-54711-4_10}
 }
@@ -164,7 +164,7 @@ pages={236--244},
 doi={10.1109/TASSP.1974.1162582}}
 
 @article{carsonfamous,
-author={Brittain, J. E.},
+author={Brittain, James E.},
 journal={Proceedings of the IEEE},
 title={John R. Carson and the conversation of radio spectrum [Scanning the Past]},
 year={1996},
@@ -406,14 +406,14 @@ doi={10.1098/rsta.2020.0079}
 }
 
 @article{fourierhist1,
-author = {Fourier, J. B. J.},
+author = {Fourier, Jean-Baptise Joseph},
 title = {Théorie de la propagation de la chaleur dans les solides},
 journal = {Institute of France},
 year = {1807}
 }
 
 @article{fourierhist2,
-author = {Fourier, J. B. J.},
+author = {Fourier, Jean-Baptise Joseph},
 title = {Théorie du mouvement de la chaleur dans les corps solides},
 journal = {Mémoires de l'Académie royale des sciences de l'Institute de France},
 volume = {4},
@@ -421,7 +421,7 @@ year = {1811}
 }
 
 @book{fourierheat,
-author = {Fourier, J. B. J.},
+author = {Fourier, Jean-Baptise Joseph},
 title = {Théorie analytique de la chaleur},
 year = {1822},
 publisher = {Chez Firmin Didot, Père et Fils},
@@ -499,7 +499,7 @@ doi={10.23919/Eusipco47968.2020.9287367}
 }
 
 @article{cola,
-author={Griffin, D. and Jae Lim},
+author={Griffin, Daniel W. and Lim, Jae S.},
 journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
 title={Signal estimation from modified short-time Fourier transform},
 year={1984},
@@ -544,7 +544,7 @@ doi = {10.1007/BF00348431}
 }
 
 @article{stftinvertible,
-author = {Heinzel, Gerhard and Rüdiger, Albrecht and Schilling, R.},
+author = {Heinzel, Gerhard and Rüdiger, Albrecht and Schilling, Roland},
 year = {2002},
 title = {Spectrum and spectral density estimation by the Discrete Fourier transform (DFT), including a comprehensive list of window functions and some new flat-top windows},
 journal = {Max-Planck-Institut f{\"u}r Gravitationsphysik}
@@ -615,7 +615,7 @@ doi = {10.1007/978-3-642-55016-4_12}
 }
 
 @article{ica1,
-author={Hyvärinen, A.},
+author={Hyvärinen, Aapo},
 journal={IEEE Transactions on Neural Networks},
 title={Fast and robust fixed-point algorithms for independent component analysis},
 year={1999},
@@ -625,7 +625,7 @@ pages={626--634},
 doi={10.1109/72.761722}}
 
 @article{ica2,
-author = {Hyvärinen, A and Oja, Erkki},
+author = {Hyvärinen, Aapo and Oja, Erkki},
 year = {2000},
 pages = {411--430},
 title = {Independent component analysis: Algorithms and applications},
@@ -674,7 +674,7 @@ doi = {10.1142/S0219691307001768}
 }
 
 @inproceedings{transientsep,
-author={J. {Janer} and R. {Marxer} and K. {Arimoto}},
+author={Janer, Jordi and Marxer, Ricard and Arimoto, Keita},
 booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
 title={Combining a harmonic-based NMF decomposition with transient analysis for instantaneous percussion separation},
 year={2012},
@@ -759,7 +759,7 @@ url = {https://ntrs.nasa.gov/citations/20020083040}
 }
 
 @article{korpel,
-author = {A. Korpel},
+author = {Korpel, Adrian},
 journal = {Applied Optics},
 number = {20},
 pages = {3624--3632},
@@ -800,7 +800,7 @@ author = {L'Ecuyer, Pierre},
 year = {2010},
 title = {Pseudorandom number generators},
 booktitle = {Encyclopedia of Quantitative Finance},
-editor = {Cont, R.},
+editor = {Rama Cont},
 isbn = {9780470061602},
 pages = {1431--1437},
 doi = {10.1002/9780470061602.eqf13003},
@@ -952,7 +952,7 @@ pages={2686--2695},
 doi={10.1109/TCSI.2008.921023}}
 
 @article{dictionary1,
-author = {Mallat, S.G. and Zhang, Zhifeng},
+author = {Mallat, Stéphane G. and Zhang, Zhifeng},
 title = {Matching pursuits with time-frequency dictionaries},
 year = {1993},
 publisher = {IEEE Press},
@@ -975,7 +975,7 @@ doi={10.1007/s11760-020-01701-8}
 
 @article{optsp,
 title={Real-time convex optimization in signal processing},
-author = {Mattingley, J. and Boyd, S.},
+author = {Mattingley, Jacob and Boyd, Stephen},
 journal={IEEE Signal Processing Magazine},
 year = {2010},
 volume = {27},
@@ -1011,7 +1011,7 @@ doi = {10.1121/1.4986647},
 }
 
 @book{dspfirst,
-author = {McClellan, James H. and Schafer, Ronald W. and Yoder, M. A.},
+author = {McClellan, James H. and Schafer, Ronald W. and Yoder, Mark A.},
 title={Signal processing first},
 publisher={Pearson Prentice Hall},
 year={2003},
@@ -1380,7 +1380,7 @@ booktitle = {Proceedings of the 15th International Conference on Digital Audio E
 }
 
 @article{shannon1948,
-author={C. E. {Shannon}},
+author={Claude E. {Shannon}},
 journal={The Bell System Technical Journal},
 title={A mathematical theory of communication},
 year={1948},
@@ -1556,7 +1556,7 @@ pages={iii/181--iii/184},
 doi={10.1109/ICASSP.2005.1415676}}
 
 @article{ndarrayfast,
-author = {Walt, {Stéfan van der} and Colbert, S. and Varoquaux, Gael},
+author = {Walt, {Stéfan van der} and Colbert, {S. Chris} and Varoquaux, Gael},
 year = {2011},
 pages = {22--30},
 title = {The NumPy array: A structure for efficient numerical computation},
@@ -1583,7 +1583,7 @@ volume={21},
 number={3},
 year={1990},
 title={Discrete Gabor expansions},
-author={Wexler, J. and Raz, S.},
+author={Wexler, Jason and Raz, Shalom},
 doi={10.1016/0165-1684(90)90087-F}
 }
 
@@ -1604,7 +1604,7 @@ doi={10.1016/0165-1684(90)90087-F}
 }
 
 @inproceedings{wavelets,
-author={Wolf, Guy and Mallat, Stéphane and Shamma, Shihab},
+author={Wolf, Guy and Mallat, Stéphane G. and Shamma, Shihab},
 booktitle={IEEE International Workshop on Machine Learning for Signal Processing},
 title={Audio source separation with time-frequency velocities},
 year={2014},
