--- a/latex/proposal.tex
+++ b/latex/proposal.tex
@@ -42,13 +42,15 @@ Machine learning models for music source separation have achieved recent success
 
 \section{Previous Work}
 
-Computational source separation has a long history \parencite{musicsepgood}, originating from the task of separating clean speech from background noise. Speech algorithms could not be generalized easily to music, and techniques more specific to music source separation were developed as a result \parencite{musicseptechniques1}. Accordingly, musical source models arose that try to exploit the characteristics of the sources in the STFT domain, such as Kernel Additive Modeling or Nonnegative Matrix Factorization \parencite{musicsepgood}.
+Computational source separation has a long history \parencite{musicsepgood}, originating from the task of separating clean speech from background noise. Speech algorithms could not be generalized easily to music, and techniques more specific to music source separation were developed as a result \parencite{musicsepintro1}. Accordingly, musical source models arose that try to exploit the characteristics of the sources in the STFT domain, such as Kernel Additive Modeling or Nonnegative Matrix Factorization \parencite{musicsepgood}.
 
-Model-based methods are ``prone to large errors and poor performance'' \parencite[13]{musicsepintro1}, and manipulating time-frequency resolution is one possible strategy to improve their results. \textcite{driedger} used multiple STFTs with different window sizes, \textcite{fitzgerald2} replaced the STFT with the CQT, and \textcite{wavelets} used a custom time-frequency transform based on wavelets. More recently, data-driven models based on machine learning surpassed previous approaches \parencite{sisec2018, musicsepintro1}.
+Model-based methods are ``prone to large errors and poor performance'' \parencite[13]{musicsepintro1}, and manipulating time-frequency resolution is one possible strategy to improve their results. \textcite{driedger} used multiple STFTs with different window sizes, \textcite{fitzgerald2} replaced the STFT with the CQT, and \textcite{wavelets} used a custom time-frequency transform based on wavelets. More recently, data-driven models based on deep neural networks (DNN) surpassed previous approaches \parencite{sisec2018, musicsepintro1}.
+
+The earliest approaches for DNN music demixing started with fully connected networks (FCN), but ``given the large size of music spectrograms, the resulting FCNs contained a large number of parameters'' \parencite[15]{musicsepgood}, which limited the networks to sliding windows of less than one second of temporal context. ``To overcome this limitation, both recurrent neural networks (RNNs) and convolutional neural networks (CNNs) were investigated as they offered a principled way to learn dynamic models '' \parencite[15]{musicsepgood}. Open-Unmix uses an RNN architecture, while the model of \textcite{plumbley2} uses a CNN architecture.
 
 \section{Proposed Research / Methodology}
 
-The adaptation of Open-Unmix to use the sliCQT requires several preliminary tasks. First, the reference Python implementation of the sliCQT\footnote{\url{https://github.com/grrrr/nsgt}} needs to be modified to use PyTorch,\footnote{\url{https://pytorch.org}} which is the GPU deep learning framework used in the reference implementation of Open-Unmix.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} Next, sliCQT parameters must be chosen to equal or surpass the STFT in music source separation. Finally, the code of Open-Unmix should be modified to replace the STFT with the sliCQT.
+The adaptation of Open-Unmix to use the sliCQT requires several preliminary tasks. First, the reference Python implementation of the sliCQT\footnote{\url{https://github.com/grrrr/nsgt}} needs to be modified to use PyTorch,\footnote{\url{https://pytorch.org}} which is the GPU deep learning framework used in the reference implementation of Open-Unmix.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} Next, sliCQT parameters must be chosen to equal or surpass the STFT in music source separation. Finally, the code of Open-Unmix should be modified to replace the STFT with the sliCQT, using either an RNN or CNN network architecture.
 
 The model will use the MUSDB18-HQ dataset \parencite{musdb18hq} for both training and evaluation, to allow fair comparisons with Open-Unmix and other published models. The objective metric used will be the BSS (Blind Source Separation) eval metrics \parencite{bss}. The MUSDB18-HQ dataset and BSS eval metrics are standard for music demixing, and have been used in previous Signal Source Separation Evaluation Campaigns (SiSEC) \parencite{sisec2018}.
 
