Last proposal tweak

--- a/latex/proposal.tex
+++ b/latex/proposal.tex
@@ -46,7 +46,7 @@ Computational source separation has a long history \parencite{musicsepgood}, ori
 
 Model-based methods are ``prone to large errors and poor performance'' \parencite[13]{musicsepintro1}, and manipulating time-frequency resolution is one possible strategy to improve their results. \textcite{driedger} used multiple STFTs with different window sizes, \textcite{fitzgerald2} replaced the STFT with the CQT, and \textcite{wavelets} used a custom time-frequency transform based on wavelets. More recently, data-driven models based on deep neural networks (DNN) surpassed previous approaches \parencite{sisec2018, musicsepintro1}.
 
-The earliest approaches for DNN music demixing started with fully connected networks (FCN), but ``given the large size of music spectrograms, the resulting FCNs contained a large number of parameters'' \parencite[15]{musicsepgood}, which limited the networks to sliding windows of less than one second of temporal context. ``To overcome this limitation, both recurrent neural networks (RNNs) and convolutional neural networks (CNNs) were investigated as they offered a principled way to learn dynamic models '' \parencite[15]{musicsepgood}. Open-Unmix uses an RNN architecture, while the model of \textcite{plumbley2} uses a CNN architecture.
+The earliest approaches for DNN-based music demixing started with fully connected networks (FCN), but ``given the large size of music spectrograms, the resulting FCNs contained a large number of parameters'' \parencite[15]{musicsepgood}, which limited the networks to sliding windows of less than one second of temporal context. ``To overcome this limitation, both recurrent neural networks (RNNs) and convolutional neural networks (CNNs) were investigated as they offered a principled way to learn dynamic models '' \parencite[15]{musicsepgood}. Recent examples of DNN-based music demixing in the STFT domain are Open-Unmix \parencite{umx}, which uses an RNN architecture, and the CNN model of \textcite{plumbley2}.
 
 \section{Proposed Research / Methodology}
 
